Class::method